@@ -1044,6 +1044,7 @@ JNIEXPORT void JNICALL Java_gnu_java_awt_peer_gtk_GtkComponentPeer_addExposeFilt
   GList *children;
   void *ptr = NSA_GET_PTR (env, obj);
   jobject *gref = NSA_GET_GLOBAL_REF (env, obj);
+  gulong hid;
 
   g_assert (gref);
 
@@ -1077,10 +1078,9 @@ JNIEXPORT void JNICALL Java_gnu_java_awt_peer_gtk_GtkComponentPeer_addExposeFilt
     {
       filterobj = GTK_OBJECT(ptr);
     }
-
-  gulong hid = g_signal_handler_find(filterobj,
-                                     G_SIGNAL_MATCH_FUNC,
-                                     0, 0, NULL, *pre_event_handler, NULL);
+  hid = g_signal_handler_find(filterobj,
+                              G_SIGNAL_MATCH_FUNC,
+                              0, 0, NULL, *pre_event_handler, NULL);
   if (hid > 0)
   {
     g_signal_handler_block(filterobj, hid);
@@ -1099,6 +1099,7 @@ JNIEXPORT void JNICALL Java_gnu_java_awt_peer_gtk_GtkComponentPeer_removeExposeF
   GList *children;
   void *ptr = NSA_GET_PTR (env, obj);
   jobject *gref = NSA_GET_GLOBAL_REF (env, obj);
+  gulong hid;
 
   g_assert (gref);
 
@@ -1135,9 +1136,9 @@ JNIEXPORT void JNICALL Java_gnu_java_awt_peer_gtk_GtkComponentPeer_removeExposeF
 
   g_signal_handlers_disconnect_by_func (filterobj,
                                         *filter_expose_event_handler, *gref);
-  gulong hid = g_signal_handler_find(filterobj,
-                                     G_SIGNAL_MATCH_FUNC,
-                                     0, 0, NULL, *pre_event_handler, NULL);
+  hid = g_signal_handler_find(filterobj,
+                              G_SIGNAL_MATCH_FUNC,
+                              0, 0, NULL, *pre_event_handler, NULL);
   if (hid > 0)
   {
     g_signal_handler_unblock(filterobj, hid);
